<resources>
    <string name="app_name">android_fundamentals</string>
    <string name="first_tw">This is my first TextView!</string>
    <string name="i_m_a_button">I\'m a button</string>
    <string name="add_your_email_address">Add your email address</string>
    <string name="i_accept_to_learn_android_very_good">I accept to learn android very good</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="notifications">notifications</string>
    <string name="search_view">This is a search view</string>
    <string name="ana_are_mere">Ana are mere!</string>
    <string name="error_null_email">Please add an email address!</string>
    <string name="this_is_an_orange_textview">This is an orange TextView</string>
    <string name="this_is_a_green_textview">This is a green TextView</string>
    <string name="this_is_a_blue_textview">This is a blue TextView</string>
    <string name="this_is_a_button">This is a button</string>
    <string name="this_is_an_edittext">This is an EditText</string>
    <string name="this_is_a_new_edittext">This is a new EditText</string>
    <string name="notify_me">Notify me :)</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="hello_textview1">Hello TextView1 :)</string>
    <string name="hello_textview2">Hello TextView2 :)</string>
    <string name="hello_textview3">Hello TextView3 :)</string>
    <string name="hello_textview4">Hello TextView4 :)</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="i_accept_the_terms_and_conditions">I accept the Terms and Conditions</string>
    <string name="submit">Submit</string>
    <string name="start_second_activity">Start second activity</string>
    <string name="call_implicit_intent">Call Implicit Intent</string>
    <string name="send_data_to_second_activity">Send data to second activity</string>
    <string name="enter_name">Enter name</string>
    <string name="magic">magic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
