<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:textSize="23dp"
        android:textStyle="bold"
        android:background="@color/colorAccent"
        android:padding="@dimen/general_padding"
        android:layout_margin="@dimen/general_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_first"
        android:ellipsize="end"
        android:text="@string/first_tw"
        />

    <ImageView
        android:id="@+id/image_view_android"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:scaleType="fitCenter"
        android:src="@drawable/andy"
        />

    <Button
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/general_padding"
        android:layout_margin="@dimen/general_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_m_a_button"
        android:onClick="btnHelloOnClick"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_margin="@dimen/general_margin"
        android:background="@color/colorAccent"
        />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_your_email_address"
        android:inputType="textEmailAddress"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/i_accept_to_learn_android_very_good"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/yes"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            />
    </RadioGroup>

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="3.5"
        android:stepSize="0.5"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="10"
        />

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/search_view"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_margin"
        android:visibility="gone"
        />

</LinearLayout>