<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".w2.W2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="139dp"
            android:layout_height="120dip"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:text="@string/this_is_an_orange_textview"
            android:textColor="@android:color/white"

            />

        <TextView
            android:layout_width="147dp"
            android:layout_height="120dip"
            android:layout_weight="1"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/this_is_a_green_textview" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="120dip"
            android:gravity="center"
            android:text="@string/this_is_a_blue_textview"
            android:layout_weight="1"
            android:background="@color/blue"
            android:textColor="@android:color/white"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="41dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/this_is_a_button"
            android:background="@color/blue"
            android:layout_margin="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/cookie" />
        <Button
            android:layout_width="41dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/this_is_a_button"
            android:background="@color/green"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FBC95B"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/this_is_an_edittext"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/this_is_a_new_edittext"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#78CAC4"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="15dp"
            android:text="@string/notify_me" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Auto backup"
            android:layout_weight="1"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#78CAC4"
        android:orientation="vertical"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#000000" />
        <RatingBar
            style="@style/Base.Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rating="4"
            android:numStars="5"
            android:layout_margin="5dp"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#000000" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/YES"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NO"
                />
        </RadioGroup>

    </LinearLayout>



</LinearLayout>